feat: allow specifically targetting speed FOV fixes #1